--- a/sections/0000-00-00-research.md
+++ b/sections/0000-00-00-research.md
@@ -6,3 +6,5 @@ glyph: grain
 My primary interests are semantics and type systems for programming languages, and implementation of programming languages (compilers). In particular, I am interested in how to take advantage of type systems to accelerate and generate efficient, portable programs.
 
 My supervisors are [Sam Lindley](http://homepages.inf.ed.ac.uk/slindley) (LFCS) and [Christophe Dubach](http://homepages.inf.ed.ac.uk/cdubach) (ICSA).
+
+I have been kicked out of ICSA.
